--- a/package.json
+++ b/package.json
@@ -1,26 +1,29 @@
 {
-  "name": "tesk-tracker-app",
+  "name": "tasks-tracker-app",
+  "homepage": "http://Mtkhin.github.io/Tasks_Tracker_App_React",
   "version": "0.1.0",
   "private": true,
-  "homepage": "http://B3pp.github.io/Tracker_app_react",
   "dependencies": {
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "json-server": "^0.17.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
+    "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
     "serve": "^12.0.1",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "server": "json-server --watch db.json --port 5000"
   },
   "eslintConfig": {
     "extends": [
